tests/machine/x/ocaml/query_sum_select.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/query_sum_select.ml", line 40, characters 14-17:
40 |     __res0 := sum n :: !__res0;
                   ^^^
Error: Unbound value sum


Context (around line 40):
  38 |   List.iter (fun n ->
  39 |       if (n > 1) then
  40 |     __res0 := sum n :: !__res0;
  41 |   ) nums;
  42 | List.rev !__res0)
